--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@ and open the template in the editor.
         <div th:replace="~{fragmentos :: barramenu(pagina='')}"/>
         
         <div class="container" align="center">
-            <img th:src="@{~/images/menu.png}" style="opacity: 10%; padding-top: 60px"/>
+            <img th:src="@{~/images/beanmaskot.png}" style="opacity: 10%; padding-top: 60px"/>
             <!--; display: block; margin-left: auto; margin-right: auto-->
         </div>
         
