--- a/src/main/resources/templates/fragmentos.html
+++ b/src/main/resources/templates/fragmentos.html
@@ -42,6 +42,21 @@ and open the template in the editor.
                 </nav>
             </div>
         </div>
+        
+        <div th:fragment="mensagens">
+            <div th:if="${not #strings.isEmpty(msgErros)}" class="alert alert-danger alert-dismissible fase show" role="alert">
+                <p th:each="msg : ${msgErros}" th:text="${msg.getDefaultMessage()}"></p>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div th:if="${not #strings.isEmpty(msgSucesso)}" class="alert alert-success alert-dismissible fase show" role="alert">
+                <p th:each="m : ${msgSucesso}" th:text="${m}"></p>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        </div> 
         <div th:fragment="imports-js">
             <script th:src="@{~/webjars/jquery/3.5.1/jquery.min.js}"/>
             <script th:src="@{~/webjars/bootstrap/4.5.0/js/bootstrap.bundle.min.js}"/>
