--- a/src/main/resources/templates/formFuncionario.html
+++ b/src/main/resources/templates/formFuncionario.html
@@ -44,6 +44,18 @@ and open the template in the editor.
                      
 
                 </div>
+                
+                <div class="form-row">
+                    <div class="form-group col">
+                        <label >Permissões:</label>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-check form-check-inline" th:each="permissao, i : ${permissoes}">
+                        <input class="form-check-input" type="checkbox" th:name="${'permissoes['+i.index+'].id'}" th:value="${permissao.id}" th:checked="${#lists.contains(funcionario.permissoes, permissao)? 'checked' : false}" />
+                        <label class="form-check-label" th:text="${permissao.nome}">t</label>
+                    </div>
+                </div>
 
                 <div class="form-row">
                     <div class="form-group col-md-6">
